# ofaf_monitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
Documents/: OFAF Monitor.pptx  serial ports.txt
jason_commands/BLE commands/: ble advertising init.txt  ble advertising off.txt  ble advertising on.txt  ble get SN.txt  ble get idle time.txt  ble init.txt  ble ping.txt  ble test1.txt
jason_commands/Serial Commands/: serial get fw ver.txt  serial ping request.txt
jason_commands/Storage Commands/: storage init.txt  storage ping.txt  storage read NVS data.txt  storage read pwd.txt  storage read ssid.txt
jason_commands/System Controller commands/: sys ping.txt
jason_commands/System Controller commands/SM Tests/: sys test sm - ble start.txt  sys test sm - system begin.txt  sys test sm - system init.txt
jason_commands/dispatcher commands/: dispatcher ping request.txt
main/: CMakeLists.txt  ofaf_main.c
main/include/Shared/: common.h  messages.h  spiffs_circular_queue.h
main/include/Task/: bleTask.h  dispatcherTask.h  serialTask.h  stateMachines.h  strgTask.h  sysControlTask.h
main/src/Shared/: cJSON.c  messages.c  spiffs_circular_queue.c
main/src/Task/: bleTask.c  dispatcherTask.c  serialTask.c  stateMachines.c  strgTask.c  sysControlTask.c
